# IEDIB_CEIA_2024-25

./: .gitignore  README.md
BigData Aplicado/Bloque 3/Actividades/3.1/clear_datasets/: README.md  pyproject.toml
BigData Aplicado/Bloque 3/Actividades/3.1/clear_datasets/clear_datasets/: transform.py
Modelos de Inteligencia Artificial/Bloque 2/fuzzy_tip/: Fuzzy_tip.ipynb
Programacion de Inteligencia Artificial/Bloque 3/Actividades/Aprendizaje 3.2/iris/: README.md  pyproject.toml
Programacion de Inteligencia Artificial/Bloque 3/Actividades/Aprendizaje 3.2/iris/iris/: service.py
Programacion de Inteligencia Artificial/Bloque 3/Actividades/Aprendizaje 3.2/iris/models/: lr.pck  svm.pck
Programacion de Inteligencia Artificial/Bloque 3/Actividades/Aprendizaje 3.2/iris/notebooks/: classification.ipynb  client.ipynb
Programacion de Inteligencia Artificial/Bloque 3/Actividades/penguins/: pyproject.toml
Programacion de Inteligencia Artificial/Bloque 3/Actividades/penguins/models/: dt.pck  knn.pck  lr.pck  svm.pck
Programacion de Inteligencia Artificial/Bloque 3/Actividades/penguins/notebooks/: classification.ipynb  client.ipynb
Programacion de Inteligencia Artificial/Bloque 3/Actividades/penguins/penguins/: service.py
Programacion de Inteligencia Artificial/Bloque 3/Actividades/practice_case/: .gitignore  README.md  pyproject.toml
Programacion de Inteligencia Artificial/Bloque 3/Actividades/practice_case/models/: churn-model.pck
Programacion de Inteligencia Artificial/Bloque 3/Actividades/practice_case/notebooks/: study_case.ipynb  test.ipynb
Programacion de Inteligencia Artificial/Bloque 3/Actividades/practice_case/practice_case/: churn_predict_app.py
Programacion de Inteligencia Artificial/Bloque 3/Actividades/practice_case/tests/: pandas_test.py
Sistemas%20de%20BigData/Bloque%205/: CE_5074_5_1_Section_1.ipynb
(+272 files in other folders)
