[tool.poetry]
name = "penguins"
version = "0.1.0"
description = ""
authors = ["CharlyMech <sanchezreciocarlos99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
