[tool.poetry]
name = "practice-case"
version = "0.1.0"
description = ""
authors = ["CharlyMech <sanchezreciocarlos99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
